--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="home__container">
             <div class="home__container_left">
               <div class="home__container_left_top">
-                <img src="../assets/Main.svg" alt="" />
+                <img src="../assets/home.png" alt="" />
               </div>
               <div class="home__container_left_center">
                 <div>
@@ -104,23 +104,65 @@
           </div>
         </section>
 
-
         <section class="collection">
-            <div class="collection__container">
-                <div class="collection__container_item">
-                    <img />
-                    <div>
-                        <h1>@lorem</h1>
-                        <p>current Bid: 0.005ETH</p>
-                    </div>
-                    <p>Chennai</p>
-                    <button>Place a bid</button>
-                </div>
+          <h1 class="collection--heading">Our Collections</h1>
+          <div class="collection__container">
+            <div class="collection__container_item">
+              <img src="./assets/content.jpg" />
+              <div>
+                <h1>@lorem</h1>
+                <p>current Bid: 0.005ETH</p>
+              </div>
+              <p>Chennai</p>
+              <button>Place a bid</button>
             </div>
+            <div class="collection__container_item">
+              <img src="./assets/content.jpg" />
+              <div>
+                <h1>@lorem</h1>
+                <p>current Bid: 0.005ETH</p>
+              </div>
+              <p>Chennai</p>
+              <button>Place a bid</button>
+            </div>
+            <div class="collection__container_item">
+              <img src="./assets/content.jpg" />
+              <div>
+                <h1>@lorem</h1>
+                <p>current Bid: 0.005ETH</p>
+              </div>
+              <p>Chennai</p>
+              <button>Place a bid</button>
+            </div>
+            <div class="collection__container_item">
+              <img src="./assets/content.jpg" />
+              <div>
+                <h1>@lorem</h1>
+                <p>current Bid: 0.005ETH</p>
+              </div>
+              <p>Chennai</p>
+              <button>Place a bid</button>
+            </div>
+            <div class="collection__container_item">
+              <img src="./assets/content.jpg" />
+              <div>
+                <h1>@lorem</h1>
+                <p>current Bid: 0.005ETH</p>
+              </div>
+              <p>Chennai</p>
+              <button>Place a bid</button>
+            </div>
+            <div class="collection__container_item">
+                <img src="./assets/content.jpg" />
+                <div>
+                  <h1>@lorem</h1>
+                  <p>current Bid: 0.005ETH</p>
+                </div>
+                <p>Chennai</p>
+                <button>Place a bid</button>
+              </div>
+          </div>
         </section>
-
-
-
       </div>
     </div>
   </body>
