--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="home__container">
             <div class="home__container_left">
               <div class="home__container_left_top">
-                <img src="../assets/home.png" alt="" />
+                <img src="./assets/home.png" alt="" />
               </div>
               <div class="home__container_left_center">
                 <div>
@@ -49,7 +49,7 @@
             </div>
             <div class="home__container_right">
               <div class="home__container_right--image">
-                <img src="../assets/right.jpg" alt="rightImage" />
+                <img src="./assets/right.jpg" alt="rightImage" />
               </div>
               <div class="home__container_right--content">
                 <p>
@@ -84,8 +84,8 @@
             </div>
             <div class="content__container_bottom">
               <div class="content__container_bottom_left">
-                <img src="../assets/content.jpg" alt="" />
-                <i><img src="../assets/Group.png" /></i>
+                <img src="./assets/content.jpg" alt="" />
+                <i><img src="./assets/Group.png" /></i>
               </div>
               <div class="content__container_bottom_right">
                 <h1>compact classic summer house.</h1>
